# OpenCareSens-air

./: .gitignore  CMakeLists.txt  README.md  build.gradle  settings.gradle
.github/workflows/: java-tests.yml
docs/plans/: 2026-03-06-caresens-air-calibration-cleanroom.md
docs/reference/: caresens-air-knowledge-base.md
java/: ANALYSIS.md  INTEGRATION.md  README.md  build.gradle  build.sh  gradlew  settings.gradle
java/src/main/java/com/opencaresens/air/: BlePacketParser.java  CalibrationAlgorithm.java  CalibrationResult.java  CareSensCalibrator.java  CheckError.java  LoessKernel.java  MathUtils.java  OracleBinaryReader.java  SensorConfig.java  SignalProcessing.java
java/src/test/java/com/opencaresens/air/: BlePacketParserTest.java  CalibrationAlgorithmTest.java  CareSensCalibratorTest.java  CheckErrorTest.java  EndToEndIntegrationTest.java  (+4 more)
oracle/: Dockerfile  Dockerfile.oracle  Dockerfile.qemu  Makefile  dump_intermediate.sh  dump_kernel_table.c  oracle_harness.c  run_experiment.sh  run_oracle.sh
reference/disasm/: all_opcal4_functions.asm  apply_simple_smooth.asm  cal_average_without_min_max.asm  check_error.asm  f_cgm_trend_opcal4.asm  f_check_cgm_trend.asm  f_rsq.asm  fit_simple_regression.asm  fun_linear_kalman.asm  gap_undiscovered.asm  regress_cal_opcal4.asm  smooth1q_err16.asm  smooth_sg_opcal4.asm  solve_linear.asm
scripts/: setup-vendor.sh
src/: calibration.c  calibration.h  check_error.c  check_error.h  loess_kernel.h  math_utils.c  math_utils.h  signal_processing.c  signal_processing.h
tests/: CMakeLists.txt  test_check_error.c  test_math_utils.c  test_signal_processing.c  test_struct_sizes.c
tools/: compare_debug.py  compare_oracle.c  compare_real_data.py  extract_ble_packets.py  extract_raw_arrays.py  full_simulation.py  irls_with_kernel.py  parse_debug_struct.py  parse_oracle.py  test_real_data.c
(+7 files in other folders)
